subnetassocition.tf
resource "aws_route_table_association" "assciotion"{
    subnet_id = aws_subnet.public.id
    route_table_id = aws_route_table.publicrt.id
}
